[package]
name = "tls-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
rcgen = "0.13"
pki-types = { package = "rustls-pki-types", version = "1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "handshake"
harness = false
